Delete cat.ID
