# docs/swagger.json
@@ -69,7 +69,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.CatId"
+                            "$ref": "#/definitions/models.CatChipNumber"
                         }
                     },
                     "400": {
@@ -138,9 +138,6 @@
                 "gender": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "nickname": {
                     "type": "string"
                 },
@@ -149,11 +146,11 @@
                 }
             }
         },
-        "models.CatId": {
+        "models.CatChipNumber": {
             "type": "object",
             "properties": {
-                "catId": {
-                    "type": "integer"
+                "chipNumber": {
+                    "type": "string"
                 }
             }
         },
